force-app/main/default/objects/custom_create126__c/custom_create126__c.object-meta.xml
<CustomObject>
    <label>Custom created object126</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects126</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>