force-app/main/default/objects/custom_create126__c/fields/custom_create_126field519__c.field-meta.xml
<CustomField>
    <fullName>custom_create_126field519__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 126field519</label>
    <type>Checkbox</type>
</CustomField>